[package]
name = "vnc-bridge"
version = "0.3.2"
edition = "2021"
description = "VNC TCP <-> WebRTC DataChannel bridge with MQTT signaling"

[dependencies]
webrtc = "0.17"
rustls = { version = "0.23", features = ["ring"] }
rumqttc = { version = "0.25", features = ["websocket", "url", "use-rustls-no-provider"] }
url = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
bytes = "1"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
rand = "0.8"
